# newcord

./: .gitignore  README.md  pyproject.toml  rp.sh
bot/: configs.py  main.py
bot/config/: core.py  database.py
bot/core/: bot.py  context.py  models.py
bot/helpers/errors/: __init__.py  bot.py  checks.py
bot/views/: base.py
manage_discord/: controllers.py  helpers.py  main.py
manage_discord/templates/base/: requirements.txt
manage_dpy/: cli.py
newcord/: controllers.py  helpers.py  main.py
newcord/templates/extras/prefix/mongodb/beanie/cogs/Admin/: admin.py
newcord/templates/extras/prefix/mongodb/beanie/cogs/Errors/: errors.py
newcord/templates/extras/prefix/mongodb/beanie/cogs/Events/: errors.py  events.py
newcord/templates/extras/prefix/mongodb/beanie/core/: bot.py  context.py  models.py
newcord/templates/extras/prefix/mongodb/beanie/helpers/: config.py
newcord/templates/extras/prefix/mongodb/beanie/helpers/checks/: core.py
newcord/templates/extras/prefix/mongodb/beanie/helpers/errors/: __init__.py  bot.py  checks.py
newcord/templates/extras/prefix/mongodb/beanie/helpers/utilities/: cog.py
template/: config.json  pyproject.toml
template/bot/: main.py
template/bot/cogs/Admin/: cog.py
template/bot/core/: bot.py  cog.py
template/bot/helpers/: config.py
template/bot/views/: base.py
