[tool.poetry]
name = "manage-dpy"
version = "0.1.0"
description = ""
authors = ["Pranoy Majumdar <kumarricky252@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
dpy = 'manage_dpy.cli:app'
discord = 'manage_dpy.cli:app'

[tool.poetry.dependencies]
python = "^3.8"
questionary = "^2.0.0"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pyright = "^1.1.325"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
