[tool.poetry]
name = "dpy-template"
version = "0.1.0"
description = "A project generated using manage-dpy"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord-py = {version = "^2.3.2", extras = ["speed"]}



[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
